资源库首页更新

--- a/HumphreyJ.NetCore.MKHX.Web/Views/Gallery/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Gallery/Index.cshtml
@@ -18,14 +18,14 @@
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm galleryChannel">
                         <div class="card-img-top">
-                            <img src="/images/placeholder/16by9.png" style="background-image:url('/images/GalleryImage.jpg')" data-holder-rendered="true">
+                            <img src="/images/placeholder/16by9.png" style="background-image:url('/images/GalleryImage2.jpg')" data-holder-rendered="true">
                         </div>
                         <div class="card-body">
                             <h5 class="text-light">图片资源</h5>
                             <p class="card-text">网站内使用的卡牌、符文、关卡、故事图片，以及由官方发布的各种高清原画等</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a class="btn btn-sm btn-outline-secondary" href="/gallery/picture">浏览</a>
+                                    <a class="btn btn-sm btn-outline-secondary" href="#">浏览</a>
                                     <a class="btn btn-sm btn-outline-secondary" href="#">上传</a>
                                 </div>
                                 @*<small class="text-muted">9 mins</small>*@
@@ -43,7 +43,7 @@
                             <p class="card-text">各个服务器各个版本的游戏数据的原始代码</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a class="btn btn-sm btn-outline-secondary" href="/gallery/gamedata">浏览</a>
+                                    <a class="btn btn-sm btn-outline-secondary" href="#">浏览</a>
                                     <a class="btn btn-sm btn-outline-secondary" href="#">上传</a>
                                 </div>
                                 @*<small class="text-muted">9 mins</small>*@
@@ -61,7 +61,7 @@
                             <p class="card-text">通过工具收集到的游戏中战斗的原始录像代码</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a class="btn btn-sm btn-outline-secondary" href="/gallery/battlerecord">浏览</a>
+                                    <a class="btn btn-sm btn-outline-secondary" href="#">浏览</a>
                                     <a class="btn btn-sm btn-outline-secondary" href="#">上传</a>
                                 </div>
                                 @*<small class="text-muted">9 mins</small>*@
