--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Footer.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Footer.cshtml
@@ -3,11 +3,11 @@
         <div class="row small">
             <div class="col-lg-12">
                 <p class="float-right">
-                    <a href="/about">关于百科</a>
                     <span>此项目源代码托管在<a href="https://github.com/HumJ0218/HumphreyJ.Netcore.MKHX" target="_blank">GitHub</a>，欢迎共同完善！</span>
                 </p>
                 <p>
                     <a class="d-inline-block mr-3" href="https://www.humphreyj.com" target="_blank">©@(DateTime.Now.Year) HumphreyJ.com</a>
+                    <a class="d-inline-block mr-3" href="/about">关于百科</a>
                     <span class="d-inline-block">基于<a href="http://www.mysticalcard.com" target="_blank" rel="nofollow">魔卡幻想</a>制作，所有数据及原画归<a href="http://www.muhenet.com">上海慕和网络科技有限公司</a>所有</span>
                 </p>
             </div>
