--- a/HumphreyJ.NetCore.MKHX.Web/Views/CardData/detail.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/CardData/detail.cshtml
@@ -26,6 +26,10 @@
     .photocard { width: 220px; max-width: 100%; height: auto; background-position: center; background-repeat: no-repeat; background-size: contain; /*background-image: url('/Images/CardRuneBack.png');*/ }
 </style>
 
+<style>
+    #radarChartSmall, #radarChartLarge { filter: grayscale(100%);opacity:0.5; }
+</style>
+
 <div class="container">
     <h5 class="pt-3 d-none d-md-block">@ViewBag.Title</h5>
 
