--- a/HumphreyJ.NetCore.MKHX.Web/Views/SkillData/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/SkillData/Index.cshtml
@@ -141,15 +141,15 @@
                     var groups = Model.GroupBy(m => PinyinHelper.GetPinyinAbbreviation(m.Key.First()));
                     foreach (var group in groups)
                     {
-                        <div class="mkhx-skill-list-wrapper">
-                            <h5 class="border-bottom border-dark mt-3 p-3 px-5">@((group.Key == '#' ? "#" : "拼音 " + group.Key).ToUpper())</h5>
-                            <div class="mkhx-skill-list pl-0 pl-sm-3 pl-lg-5 clearfix">
-                                @foreach (var i in group)
-                                {
-                                    @await Html.PartialAsync("~/Views/Shared/partial/SkillAbbr.cshtml", i)
-                                }
-                            </div>
+                    <div class="mkhx-skill-list-wrapper">
+                        <h5 class="border-bottom border-dark mt-3 p-3 px-5">@((group.Key == '#' ? "#" : (group.Key>='a'&& group.Key<='z')?( "拼音 " + (group.Key + "").ToUpper()): (""+ group.Key)))</h5>
+                        <div class="mkhx-skill-list pl-0 pl-sm-3 pl-lg-5 clearfix">
+                            @foreach (var i in group)
+                            {
+                                @await Html.PartialAsync("~/Views/Shared/partial/SkillAbbr.cshtml", i)
+                            }
                         </div>
+                    </div>
                     }
                     break;
                 }
@@ -159,7 +159,7 @@
                     foreach (var group in groups)
                     {
                         <div class="mkhx-skill-list-wrapper">
-                            <h5 class="border-bottom border-dark mt-3 p-3 px-5">@((group.Key == '#' ? "#" : "拼音 " + group.Key).ToUpper())</h5>
+                            <h5 class="border-bottom border-dark mt-3 p-3 px-5">@((group.Key == '#' ? "#" : (group.Key >= 'a' && group.Key <= 'z') ? ("拼音 " + (group.Key + "").ToUpper()) : ("" + group.Key)))</h5>
                             <div class="mkhx-skill-list pl-0 pl-sm-3 pl-lg-5 clearfix">
                                 @foreach (var i in group)
                                 {
