--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/partial/Card.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/partial/Card.cshtml
@@ -1,4 +1,10 @@
 ﻿@model HumphreyJ.NetCore.MKHX.GameData.ParsedCardData
-@{
+@if (Model == null)
+{
+    <a class="text-danger">不存在的卡牌数据</a>
+}
+else
+{
     var className = EnumAccesser.CardColorCss.ToDictionary(m => m.Key, m => m.Value.Name)[Model.Color];
-}<a class="btn btn-outline-@(className) m-1 border-0" href="/carddata/detail/@(Model.CardId)"><img src="~/images/race@(Model.Race).png" style="height:1.4em"> <span>@(Model.CardName)</span></a>
+    <a class="btn btn-outline-@(className) m-1 border-0" href="/carddata/detail/@(Model.CardId)"><img src="~/images/race@(Model.Race).png" style="height:1.4em"> <span>@(Model.CardName)</span></a>
+}
