--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/partial/Skill.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/partial/Skill.cshtml
@@ -1,2 +1,9 @@
 ﻿@model HumphreyJ.NetCore.MKHX.GameData.ParsedSkillData
-<a class="btn btn-outline-secondary m-1 border-0" href="/skilldata/detail/@(Model.Name)"><img class="mr-1" style="height:1.4em" src="@("//oss.mkhx.humphreyj.com/unity/frame/icon_skill_" + Model.SkillCategory + ".png")" /><span>@(Model.Name)</span></a>
+@if (Model == null)
+{
+    <a class="text-danger">不存在的技能数据</a>
+}
+else
+{
+    <a class="btn btn-outline-secondary m-1 border-0" href="/skilldata/detail/@(Model.Name)"><img class="mr-1" style="height:1.4em" src="@("//oss.mkhx.humphreyj.com/unity/frame/icon_skill_" + Model.SkillCategory + ".png")" /><span>@(Model.Name)</span></a>
+}
