--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/partial/Card.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/partial/Card.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HumphreyJ.NetCore.MKHX.GameData.ParsedCardData
 @if (Model == null)
 {
-    <a class="text-danger">不存在的卡牌数据</a>
+    <a class="btn btn-outline-danger m-1 border-0">引用了不存在的卡牌</a>
 }
 else
 {
