更新项目版本到core 2.2，更新bootstrap主题

--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Layout.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Layout.cshtml
@@ -26,8 +26,7 @@
     <link href="~/css/site.css" rel="stylesheet" />
 
     <script src="~/js/jquery.min.js"></script>
-    <script src="~/js/popper.min.js"></script>
-    <script src="~/js/bootstrap.min.js"></script>
+    <script src="~/js/bootstrap.bundle.min.js"></script>
 
 </head>
 <body>
