列表契约卡排序

--- a/HumphreyJ.NetCore.MKHX.Web/Views/CardData/detail.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/CardData/detail.cshtml
@@ -291,45 +291,45 @@
                         <h6>其它属性</h6>
                         <table class="m-4 mb-0" style="color:#999">
                             @*<tr>
-                                    <th class="text-right pr-3">ActivityPacket</th>
-                                    <td>@(Model.ActivityPacket)</td>
-                                </tr>
-                                <tr>
-                                    <th class="text-right pr-3">ActivityPacketRoll</th>
-                                    <td>@(Model.ActivityPacketRoll)</td>
-                                </tr>
-                                <tr>
-                                    <th class="text-right pr-3">ImageId</th>
-                                    <td>@(Model.ImageId)</td>
-                                </tr>
-                                <tr>
-                                    <th class="text-right pr-3">FullImageId</th>
-                                    <td>@(Model.FullImageId)</td>
-                                </tr>
-                                <tr>
-                                    <th class="text-right pr-3">FragMaze</th>
-                                    <td>@(Model.FragMaze)</td>
-                                </tr>
-                                <tr>
-                                    <th class="text-right pr-3">FragRobber</th>
-                                    <td>@(Model.FragRobber)</td>
-                                </tr>
-                                <tr>
-                                    <th class="text-right pr-3">FragSeniorPacket</th>
-                                    <td>@(Model.FragSeniorPacket)</td>
-                                </tr>
-                                <tr>
-                                    <th class="text-right pr-3">FragNewYearPacket</th>
-                                    <td>@(Model.FragNewYearPacket)</td>
-                                </tr>
-                                <tr>
-                                    <th class="text-right pr-3">FragMagicCard</th>
-                                    <td>@(Model.FragMagicCard)</td>
-                                </tr>
-                                <tr>
-                                    <th class="text-right pr-3">PriceRank</th>
-                                    <td>@(Model.PriceRank)</td>
-                                </tr>*@
+            <th class="text-right pr-3">ActivityPacket</th>
+            <td>@(Model.ActivityPacket)</td>
+        </tr>
+        <tr>
+            <th class="text-right pr-3">ActivityPacketRoll</th>
+            <td>@(Model.ActivityPacketRoll)</td>
+        </tr>
+        <tr>
+            <th class="text-right pr-3">ImageId</th>
+            <td>@(Model.ImageId)</td>
+        </tr>
+        <tr>
+            <th class="text-right pr-3">FullImageId</th>
+            <td>@(Model.FullImageId)</td>
+        </tr>
+        <tr>
+            <th class="text-right pr-3">FragMaze</th>
+            <td>@(Model.FragMaze)</td>
+        </tr>
+        <tr>
+            <th class="text-right pr-3">FragRobber</th>
+            <td>@(Model.FragRobber)</td>
+        </tr>
+        <tr>
+            <th class="text-right pr-3">FragSeniorPacket</th>
+            <td>@(Model.FragSeniorPacket)</td>
+        </tr>
+        <tr>
+            <th class="text-right pr-3">FragNewYearPacket</th>
+            <td>@(Model.FragNewYearPacket)</td>
+        </tr>
+        <tr>
+            <th class="text-right pr-3">FragMagicCard</th>
+            <td>@(Model.FragMagicCard)</td>
+        </tr>
+        <tr>
+            <th class="text-right pr-3">PriceRank</th>
+            <td>@(Model.PriceRank)</td>
+        </tr>*@
                             <tr>
                                 <th class="text-right pr-3">FightRank</th>
                                 <td>@(Model.FightRank)</td>
@@ -345,6 +345,18 @@
                             <tr>
                                 <th class="text-right pr-3">DustNumber</th>
                                 <td>@(Model.DustNumber)</td>
+                            </tr>
+                            <tr>
+                                <th class="text-right pr-3">OrdConPacket</th>
+                                <td>@(Model.OrdConPacket)</td>
+                            </tr>
+                            <tr>
+                                <th class="text-right pr-3">OrdConPacketRoll</th>
+                                <td>@(Model.OrdConPacketRoll)</td>
+                            </tr>
+                            <tr>
+                                <th class="text-right pr-3">Terminate</th>
+                                <td>@(Model.Terminate)</td>
                             </tr>
                         </table>
                     </div>
