--- a/HumphreyJ.NetCore.MKHX.Web/Views/CardData/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/CardData/Index.cshtml
@@ -120,6 +120,7 @@
                             <option value="hp10">10 级生命</option>
                             <option value="hp15">15 级生命</option>
                             <option value="rank">碎片等级</option>
+                            <option value="terminate">Terminate</option>
                         </select>
                         <select class="form-control bg-dark text-white form-inline px-1" name="desc" style="width:4.25em">
                             <option value="0">顺序</option>
@@ -189,10 +190,10 @@
                     if (ViewData["desc"] as string != "0") { groups = groups.OrderByDescending(m => m.Key); }
                     foreach (var group in groups)
                     {
-                    <div class="mkhx-card-list-wrapper">
-                        <h5 class="border-bottom border-dark mt-3 p-3 px-5">@((group.Key == '#' ? "#" : (group.Key >= 'a' && group.Key <= 'z') ? ("拼音 " + (group.Key + "").ToUpper()) : ("" + group.Key)))</h5>
-                        @await Html.PartialAsync("~/Views/Shared/partial/CardList.cshtml", group)
-                    </div>
+                        <div class="mkhx-card-list-wrapper">
+                            <h5 class="border-bottom border-dark mt-3 p-3 px-5">@((group.Key == '#' ? "#" : (group.Key >= 'a' && group.Key <= 'z') ? ("拼音 " + (group.Key + "").ToUpper()) : ("" + group.Key)))</h5>
+                            @await Html.PartialAsync("~/Views/Shared/partial/CardList.cshtml", group)
+                        </div>
                     }
                     break;
                 }
@@ -202,10 +203,10 @@
                     if (ViewData["desc"] as string != "0") { groups = groups.OrderByDescending(m => m.Key); }
                     foreach (var group in groups)
                     {
-                    <div class="mkhx-card-list-wrapper">
-                        <h5 class="border-bottom border-dark mt-3 p-3 px-5">@((group.Key == '#' ? "#" : (group.Key >= 'a' && group.Key <= 'z') ? ("拼音 " + (group.Key + "").ToUpper()) : ("" + group.Key)))</h5>
-                        @await Html.PartialAsync("~/Views/Shared/partial/CardList.cshtml", group)
-                    </div>
+                        <div class="mkhx-card-list-wrapper">
+                            <h5 class="border-bottom border-dark mt-3 p-3 px-5">@((group.Key == '#' ? "#" : (group.Key >= 'a' && group.Key <= 'z') ? ("拼音 " + (group.Key + "").ToUpper()) : ("" + group.Key)))</h5>
+                            @await Html.PartialAsync("~/Views/Shared/partial/CardList.cshtml", group)
+                        </div>
                     }
                     break;
                 }
@@ -353,6 +354,18 @@
                     {
                         <div class="mkhx-card-list-wrapper">
                             <h5 class="border-bottom border-dark mt-3 p-3 px-5">15 级生命 @(group.Key)</h5>
+                            @await Html.PartialAsync("~/Views/Shared/partial/CardList.cshtml", group)
+                        </div>
+                    }
+                    break;
+                }
+            case "terminate":
+                {
+                    var groups = Model.GroupBy(m => m.Terminate);
+                    foreach (var group in groups)
+                    {
+                        <div class="mkhx-card-list-wrapper">
+                            <h5 class="border-bottom border-dark mt-3 p-3 px-5">Terminate @(group.Key)</h5>
                             @await Html.PartialAsync("~/Views/Shared/partial/CardList.cshtml", group)
                         </div>
                     }
