修正 #26 文字过暗的问题，脚本资源地址改为cdn站

--- a/HumphreyJ.NetCore.MKHX.Web/Views/Gallery/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Gallery/Index.cshtml
@@ -21,7 +21,7 @@
                             <img src="/images/placeholder/16by9.png" style="background-image:url('/images/GalleryImage2.jpg')" data-holder-rendered="true">
                         </div>
                         <div class="card-body">
-                            <h5 class="text-light">图片资源</h5>
+                            <h5 class="text-dark">图片资源</h5>
                             <p class="card-text">网站内使用的卡牌、符文、关卡、故事图片，以及由官方发布的各种高清原画等</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
@@ -39,7 +39,7 @@
                             <img src="/images/placeholder/16by9.png" style="background-image:url('/favicon.png')" data-holder-rendered="true">
                         </div>
                         <div class="card-body">
-                            <h5 class="text-light">游戏数据</h5>
+                            <h5 class="text-dark">游戏数据</h5>
                             <p class="card-text">各个服务器各个版本的游戏数据的原始代码</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
@@ -57,7 +57,7 @@
                             <img src="/images/placeholder/16by9.png" style="background-image:url('/images/GalleryBattleRecord.jpg')" data-holder-rendered="true">
                         </div>
                         <div class="card-body">
-                            <h5 class="text-light">战斗录像</h5>
+                            <h5 class="text-dark">战斗录像</h5>
                             <p class="card-text">通过工具收集到的游戏中战斗的原始录像代码</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
