--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Layout.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Layout.cshtml
@@ -21,12 +21,12 @@
     <link rel="mask-icon" href="/favicon.png" />
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="~/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://oss2.humphreyj.com/script/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="https://oss2.humphreyj.com/script/bootswatch-4.3.1/cyborg/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 
-    <script src="~/js/jquery.min.js"></script>
-    <script src="~/js/bootstrap.bundle.min.js"></script>
+    <script src="https://oss2.humphreyj.com/script/jquery-3.4.1/jquery.min.js"></script>
+    <script src="https://oss2.humphreyj.com/script/bootstrap-4.3.1/js/bootstrap.bundle.min.js"></script>
 
 </head>
 <body>
