--- a/HumphreyJ.NetCore.MKHX.Web/Views/SkillData/detail.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/SkillData/detail.cshtml
@@ -26,7 +26,7 @@
 
     @if (listall.Count() > Model.Count())
     {
-        <p class="mt-3 mb-0 p-3 bg-dark text-light text-center">查看所有 <a href="@abbr?all=1">@abbr</a> 技能</p>
+        <p class="mt-3 mb-0 p-3 bg-dark text-dark text-center">查看所有 <a href="@abbr?all=1">@abbr</a> 技能</p>
     }
 
     @foreach (var i in Model)
@@ -38,7 +38,7 @@
             <div class="border border-secondary">
                 <h6 class="p-3 bg-dark">@i.Name</h6>
                 <div class="p-3">
-                    <div class="text-light">
+                    <div class="text-dark">
                         @if (string.IsNullOrEmpty(i.DESCRIBE_NEW))
                         {
                             <p>
